--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -12,8 +12,8 @@
     <script src='./lib/fhir-client.js'></script>
     <script>
         FHIR.oauth2.authorize({
-            'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758'
-            , 'scope': 'patient/Patient.read patient/Observation.read launch online_access openid profile'
+            'client_id': '57b58e44-dc31-481a-bfd6-ae15527c9f16'
+            , 'scope': 'patient/Patient.read patient/Observation.read patient/DocumentReference.read patient/DocumentReference.write launch online_access openid profile'
         });
     </script>
     <div class="spinner">
