--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -68,12 +68,12 @@
     <script src='./lib/fhir-client.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
+        console.log('URL: ' + window.location.href);
         extractData().then(
             //Display Patient Demographics and Observations if extractData was success
             function (p) {
                 drawVisualization(p);
-            }
-            , //Display 'Failed to call FHIR Service' if extractData failed
+            }, //Display 'Failed to call FHIR Service' if extractData failed
             function () {
                 $('#loading').hide();
                 $('#errors').html('<p> Failed to call FHIR Service </p>');
